--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,43 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div id="sidebar">
+		<div id="logo">
+			<%= link_to root_path do %>
+				<%= image_tag "logo.png" %> 
+			<% end %>	
+		</div>
+		<ul>
+			<li class="category"> Website </li>
+			<li><%= link_to "Blog", root_path %></li>
+			<li> About </li>
+		</ul>
 
-<%= yield %>
+		<ul>
+			<li class="category">Social</li>
+			<li><a href="https://github.com/rachelsoh87">Github</a></li>
+			<li><a href="https://www.facebook.com/rachelsoh87">Facebook</a></li>
+			<li><a href="mailto:ahsoh87@yahoo.com.my">Email</a></li>
+		</ul>
+		<p class="sign_in">Admin Login</p>
+	</div>
+
+	<div id="main_content">
+		<div id="header">
+			<p>All Posts</p>
+			<div class="buttons">
+				<button class="button"><%=link_to "New Post", new_post_path %></button>
+				<button class="button">Logout</button>
+			</div>
+		</div>
+
+		<% flash.each do |name, msg| %>
+			<%= content_tag(:div, msg, class: "alert") %>
+		<% end %>	
+		<%= yield %>
+	</div>
+
+
 
 </body>
 </html>
