--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,18 +1,22 @@
-<h1>new post</h1>
+<div id="page_wrapper">
 
-<%= form_for :post, url: posts_path do |f| %>
-	<p>
-		<%= f.label :title %> <br>
-		<%= f.text_field :title %> 
-	</p>
+	<h1>new post</h1>
 
-	<p>
-		<%= f.label :body %> <br>
-		<%= f.text_area :body %> 
-	</p>
+	<%= form_for :post, url: posts_path do |f| %>
+		<p>
+			<%= f.label :title %> <br>
+			<%= f.text_field :title %> 
+		</p>
 
-	<p>
-		<%= f.submit %>
-	</p>
+		<p>
+			<%= f.label :body %> <br>
+			<%= f.text_area :body %> 
+		</p>
 
-<% end %>
+		<p>
+			<%= f.submit %>
+		</p>
+
+	<% end %>
+
+</div>
