--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,23 +25,30 @@
 			<li><a href="https://www.facebook.com/rachelsoh87">Facebook</a></li>
 			<li><a href="mailto:ahsoh87@yahoo.com.my">Email</a></li>
 		</ul>
-		<p class="sign_in">Admin Login</p>
+
+		<% if !user_signed_in? %>
+			<p class="sign_in">Admin Login</p>
+		<% end %>	
 	</div>
 
 	<div id="main_content">
 		<div id="header">
-		 <% if current_page?(root_path) %>
-			<p>All Posts</p>
-		<% elsif current_page?(about_path)%>
-			<p>About</p>
-		<% else %>
-			<%= link_to "Link back to all posts", root_path %>
-		<% end %>
-			<div class="buttons">
-				<button class="button"><%=link_to "New Post", new_post_path %></button>
-				<button class="button">Logout</button>
-			</div>
+			<% if current_page?(root_path) %>
+				<p>All Posts</p>
+			<% elsif current_page?(about_path)%>
+				<p>About</p>
+			<% else %>
+				<%= link_to "Link back to all posts", root_path %>
+			<% end %>
+
+			<% if user_signed_in? %>
+				<div class="buttons">
+					<button class="button"><%=link_to "New Post", new_post_path %></button>
+					<button class="button">Logout</button>
+				</div>
+			<% end %>
 		</div>
+
 
 		<% flash.each do |name, msg| %>
 			<%= content_tag(:div, msg, class: "alert") %>
