--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,8 +3,8 @@
 	</div>
 
 	<div id="content">
-		<p>week 2 of my 12 Web Apps in 12 Weeks Challenge.</p>
-		<p>This week I built a blog in Rails 4. You're actually on the demo application right now. Cool stuff, right!.</p>
+		<p>Rachel Soh</p>
+		<p>Currently learning how to build a blog through online tutorials</p>
 
 	</div>
 </div>
